syntax = "proto3";

package clients.grpc.test;

service UnitTestService {
  // Simple RPC
  rpc SayHello(Greeting) returns(Greeting) {}
  // Server-to-client streaming RPC
  rpc ReadMany(StreamGreeting) returns(stream StreamGreeting) {}
  // Client-to-server streaming RPC
  rpc WriteMany(stream StreamGreeting) returns(StreamGreeting) {}
  // Bidirectional streaming RPC
  rpc Chat(stream StreamGreeting) returns(stream StreamGreeting) {}
}

message Greeting {
  string name = 1;
}

message StreamGreeting {
  int32 number = 1;
  string name = 2;
}

